# stellar-routine-rust

./: .gitignore  Cargo.toml  README.md
assets/dialogues/: npc_greetings.tera
src/: camera.rs  lib.rs  machine.rs  main.rs  map.rs  save.rs
src/items/: inventory.rs  item.rs  mod.rs  recipe.rs
src/machines/: machine.rs  mod.rs
src/map/: machine.rs  map.rs  mod.rs
src/units/: mod.rs  movements.rs  pathfinding.rs  unit.rs  units.rs
